turning the page in

--- a/asgn3/World.html
+++ b/asgn3/World.html
@@ -13,15 +13,20 @@
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
-    <script src="ColoredPoints.js"></script>
+    <script src="lib/cuon-matrix-cse160.js"></script>
+   
     <script src="Point.js"></script>
-    <script src="Triangle.js"></script>
+    <script src="Triangle2.js"></script>
     <script src="Circle.js"></script>
-    <script src="Cube.js"></script>
+    <script src="Cube2.js"></script>
+    <script src="Cylinder.js"></script>
+    <script src="Vector.js"></script>
+    <script src="Camera.js"></script>
+    <script src="World.js"></script>
 
     <p>
 
-    <p id="numdot">XXX</p>
+    <p id="numdot">1996HondaCivicEX</p>
 
     <button type="button" id="green">Green</button>
     <button type="button" id="red">Red</button>
@@ -40,13 +45,21 @@
     <p>
     Blue<input type="range" min="0" max="100" value="0" class="slider" id="blueSlide">
     <p>
-    Size<input type="range" min="5" max="40" value="0" class="slider" id="sizeSlide">
+    Joint<input type="range" min="-45" max="45" value="0" class="slider" id="jointSlide">
+    Animation:
+    <button type="button" id="on">ON</button>
+    <button type="button" id="off">OFF</button>
+
     <p>
-    Segments<input type="range" min="5" max="40" value="0" class="slider" id="segSlide">
+    Joint<input type="range" min="-45" max="45" value="0" class="slider" id="magentaSlide">
+    Animation:
+    <button type="button" id="mon">ON</button>
+    <button type="button" id="moff">OFF</button>
     <p>
-    Triangle Width<input type="range" min="-300" max="300" value="0" class="slider" id="triSlide">
-    <p>
-    Triangle Height<input type="range" min="-300" max="300" value="0" class="slider" id="heightSlide">
+    Camera Angle<input type="range" min="0" max="3600" value="0" class="slider" id="angleSlide">
+
+    
+    
 
   </body>
 </html>
